--- a/client/package.json
+++ b/client/package.json
@@ -19,11 +19,14 @@
     },
     "dependencies": {
         "aws-sdk": "2.316.0",
-        "mobx": "^5.1.2",
-        "mobx-react": "^5.2.8",
-        "react": "^16.5.2",
-        "react-dom": "^16.5.2",
-        "react-form": "^4.0.1"
+        "mobx": "^6.7.0",
+        "mobx-react": "^7.6.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-select": "^5.7.0",
+        "react-tabs": "^6.0.0",
+        "semantic-ui-css": "^2.5.0",
+        "semantic-ui-react": "^2.1.4"
     },
     "devDependencies": {
         "@babel/plugin-proposal-class-properties": "^7.1.0",
