--- a/aws/package.json
+++ b/aws/package.json
@@ -6,6 +6,7 @@
     "deploy": "npm i && sls deploy",
     "deploy:production": "npm i && sls deploy --stage production"
   },
-  "dependencies": {
+  "devDependencies": {
+    "fullstack-serverless": "^0.8.0"
   }
 }
