--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,7 @@
     "scripts": {
         "start": "npm i && codeglue --mode=server --stage=development",
         "start:production": "npm i && codeglue --mode=server --stage=production",
-        "build:production": "npm i && codeglue --stage=production",
-        "deploy:production": "npm run build:production && aws s3 sync ./builds/web s3://freestyle-judge-production"
+        "build:production": "npm i && codeglue --stage=production"
     },
     "dependencies": {
         "aws-sdk": "2.316.0",
