--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
         "react-dom": "^18.2.0",
         "react-select": "^5.7.0",
         "react-tabs": "^6.0.0",
+        "react-to-pdf": "0.0.14",
         "semantic-ui-css": "^2.5.0",
         "semantic-ui-react": "^2.1.4",
         "uuid": "^3.1.0"
