--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,7 @@
         "mobx": "^6.7.0",
         "mobx-react": "^7.6.0",
         "react": "^18.2.0",
-        "react-cognito-auth-widget": "git+https://github.com/SmilesAir/AuthWidget.git#v1.0.3",
+        "react-cognito-auth-widget": "git+https://github.com/SmilesAir/AuthWidget.git",
         "react-dom": "^18.2.0",
         "react-select": "^5.7.0",
         "react-tabs": "^6.0.0",
