Fix results being able to change pool

--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,7 @@
         "aws-sdk": "2.316.0",
         "crc-32": "^1.2.2",
         "formik": "^2.4.3",
-        "freestyle-admin-widget": "git+https://github.com/SmilesAir/FreestyleAdminWidget.git",
+        "freestyle-admin-widget": "github:SmilesAir/FreestyleAdminWidget",
         "mobx": "^6.7.0",
         "mobx-react": "^7.6.0",
         "react": "^18.2.0",
