Require eventData to be recent before locking/calc pool

--- a/aws/serverless.yml
+++ b/aws/serverless.yml
@@ -129,6 +129,13 @@ functions:
           path: /getSetPermalinkParams/{crc32}
           method: post
           cors: true
+  updatePoolLocked:
+    handler: source/main.updatePoolLocked
+    events:
+      - http:
+          path: /updatePoolLocked/{poolKey}/isLocked/{isLocked}
+          method: post
+          cors: true
 
 resources:
   Resources:
