--- a/client/.babelrc
+++ b/client/.babelrc
@@ -10,11 +10,7 @@
         "legacy": true
       }
     ],
-    [
-      "@babel/plugin-proposal-class-properties",
-      {
-        "loose": true
-      }
-    ]
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-transform-modules-commonjs"
   ]
 }
