--- a/aws/serverless.yml
+++ b/aws/serverless.yml
@@ -206,3 +206,4 @@ custom:
     bucketName: deployed-bucket
     distributionFolder: ../client/dist
     indexDocument: index.html
+    errorDocument: index.html
